# likes

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
likes/config/: urls.py  wsgi.py
likes/config/settings/: dev.py  main.py
likes/users/: admin.py  models.py
likes/users/migrations/: 0001_initial.py
likes/videos/: admin.py  apps.py  models.py  urls.py
likes/videos/management/commands/: generate_test_data.py
likes/videos/migrations/: 0001_initial.py
likes/videos/utils/: repositories.py  serializers.py  services.py
likes/videos/views/: likes.py  statistics.py  videos.py
